--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <h3> A cute animation </h3>
         <img src="underconstruction.jpg">
         <p> Pikachu animation coming soon </p>
+        <a href="memory.html">THIS IS THE MEMORY GAME</>
     </body>
 </html>
