--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
                 </td>
                 <td>
-                    <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
+                    <a href="memory.html"> <button><span class="fancy">Memory game</span><br><img src="lego1.png" style="margin-bottom:5px;height:180px;"></button></a>
             </td>
             <td>
                 <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
