--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head> 
         <title> Home page </title>
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
+        <link rel="icon" href="https://icon2.kisspng.com/20180526/eoq/kisspng-pikachu-ash-ketchum-pokmon-eevee-glasses-5b0a20bfa39628.7293394815273903996701.jpg">
     </head>
     <body>
-        <center> <h1> Alex's website of awesome </h1></center>
+        <center> <div class="title"> <img height="10%" class="h1pikaleft" src="https://icon2.kisspng.com/20180526/eoq/kisspng-pikachu-ash-ketchum-pokmon-eevee-glasses-5b0a20bfa39628.7293394815273903996701.jpg"></div><div><h1> Alex's website of awesome </h1></div><</center>
         <div class="gamesdiv">
         <h2> Games </h2>
         <br>
@@ -44,6 +45,15 @@
                 </div>
                 <script src="script.js"></script> 
             </div>
-        
+        <table>
+            <tr>
+                <td>
+                        <a href="cheapyoutube.html"> <button id="cheapyoutube"> <span class="appbutton">Cheap Youtube (will be updated soon)</span> <br><img src="https://ih1.redbubble.net/image.25011287.7046/flat,550x550,075,f.u2.jpg" style="margin-bottom:5px;border-radius:20%;height:180px;"></button></a>
+                </td>
+                <td>
+                        <a href="shopserver.html"> <button id="shopserver"> <span class="appbutton">Shop server (will be updated soon)</span> <br><img src="https://us.123rf.com/450wm/val2014/val20141603/val2014160300006/54302308-stock-vector-shopping-cart-icon.jpg?ver=6" style="margin-bottom:5px;border-radius:20%;height:180px;"></button></a>
+                </td>
+            </tr>
             
     </body>
+</html>
