--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <td>
                         <a href="shopserver.html"> <button id="shopserver"> <span class="appbutton">Shop server (will be updated soon)</span> <br><img src="https://us.123rf.com/450wm/val2014/val20141603/val2014160300006/54302308-stock-vector-shopping-cart-icon.jpg?ver=6" style="margin-bottom:5px;border-radius:20%;height:180px;"></button></a>
                 </td>
+                <td>
+                    <a href="sketch.html">sketch</a>
+                </td>
             </tr>
             
     </body>
