--- a/sketch.html
+++ b/sketch.html
@@ -9,6 +9,7 @@
 
         </canvas>
     </body>
+    <button id="testbutton"> HELLO WORLD </button>
     <script src="sketch.js" type="text/javascript"></script>
 
 </html>
