--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
     <head> 
-        <title> Home page </title>
+        <title> Portfolio </title>
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
         <link rel="icon" href="https://icon2.kisspng.com/20180526/eoq/kisspng-pikachu-ash-ketchum-pokmon-eevee-glasses-5b0a20bfa39628.7293394815273903996701.jpg">
     </head>
     <body>
-        <center> <div class="title"> <img height="10%" class="h1pikaleft" src="https://icon2.kisspng.com/20180526/eoq/kisspng-pikachu-ash-ketchum-pokmon-eevee-glasses-5b0a20bfa39628.7293394815273903996701.jpg"></div><div><h1> Alex's website of awesome </h1></div><</center>
         <div class="gamesdiv">
         <h2> Games </h2>
         <br>
@@ -17,18 +16,7 @@
                 <td>
                     <a href="memory.html"> <button><span class="fancy">Memory game</span><br><img src="lego1.png" style="margin-bottom:5px;height:180px;"></button></a>
             </td>
-            <td>
-                <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
-        </td>
-        <td>
-            <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
-    </td>
-    <td>
-        <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
-</td>
-<td>
-    <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
-</td>
+           
             </tr>
         </table>
         
