--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="https://icon2.kisspng.com/20180526/eoq/kisspng-pikachu-ash-ketchum-pokmon-eevee-glasses-5b0a20bfa39628.7293394815273903996701.jpg">
     </head>
     <body>
+        <center><h1> Alex ROBIC Online portfolio </h1> </center>
         <div class="gamesdiv">
         <h2> Games </h2>
         <br>
@@ -12,9 +13,11 @@
             <tr>
                 <td>
                         <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
+                    <br> (December 2017)
                 </td>
                 <td>
                     <a href="memory.html"> <button><span class="fancy">Memory game</span><br><img src="lego1.png" style="margin-bottom:5px;height:180px;"></button></a>
+                    <br> (April 2018, web development class project)
             </td>
            
             </tr>
