--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <br>
         <table>
             <tr>
-                <td style='width:45%'>
+                <td style='width:45%; float:right;'>
                         <a href="cookiethief/cookie.html"> <button><span class="fancy">Cookie thief</span><br><img src="pusheeneatcookie.jpg" style="margin-bottom:5px;"></button></a>
                     <br> <center>(December 2017)</center>
                 </td>
-                <td style='width:45%'>
+                <td style='width:45%; float:none;'>
                     <a href="memory.html"> <button><span class="fancy">Memory game</span><br><img src="lego1.png" style="margin-bottom:5px;height:180px;"></button></a>
                     <br> <center> (April 2018, web development class project) </center>
             </td>
