--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <center><h2>Resume</h2><br>
         <a href='Resume.pdf'> <button><h3>Resume (PDF)</h3></button></a></center>
         <!--The following section is for the web dev class mainly-->
-        <a href='webdev/example.html'><button>CLICK HERE FOR THE WEBDEV CLASS</button></a>
+        <a href='WebDev/example.html'><button>CLICK HERE FOR THE WEBDEV CLASS</button></a>
             
     </body>
 </html>
