--- a/WebDev/example.html
+++ b/WebDev/example.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-    <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="bongo.jpg" type="image/jpg">
-    <!--<script type="text/javascript" src="script.js">intro();</script>-->
+    <script type="text/javascript" src="script.js">intro();</script>
     <title> The example page </title>
     </head>
     <header>
